{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 269,
  "lineage": "c7b06b3e-bbf2-8689-9695-042cfe2358dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:listener/app/jydweatherapp-dev-alb/f17c430cbe903a43/1e631b870059e6fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:targetgroup/jydweatherapp-dev-target-grp/3d580b3d69dbf854",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:listener/app/jydweatherapp-dev-alb/f17c430cbe903a43/1e631b870059e6fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:loadbalancer/app/jydweatherapp-dev-alb/f17c430cbe903a43",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb_target_group.tg",
            "aws_lb.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:targetgroup/jydweatherapp-dev-target-grp/3d580b3d69dbf854",
            "arn_suffix": "targetgroup/jydweatherapp-dev-target-grp/3d580b3d69dbf854",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:targetgroup/jydweatherapp-dev-target-grp/3d580b3d69dbf854",
            "lambda_multi_value_headers_enabled": false,
            "name": "jydweatherapp-dev-target-grp",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform"
            },
            "target_type": "ip",
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b65d10e4e82a9465",
            "domain": "vpc",
            "id": "eipalloc-0920bb1936612b99f",
            "network_interface": "eni-04437f15c5470dcba",
            "private_dns": "ip-10-0-0-187.eu-west-1.compute.internal",
            "private_ip": "10.0.0.187",
            "public_dns": "ec2-108-128-208-180.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.208.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ee02e9aba0010c23",
            "domain": "vpc",
            "id": "eipalloc-03e1f41ddbfb052e7",
            "network_interface": "eni-04ba35a3c9f64d552",
            "private_dns": "ip-10-0-1-229.eu-west-1.compute.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-18-200-221-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.221.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fbaeaacd5e72b39c",
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-ig"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:loadbalancer/app/jydweatherapp-dev-alb/f17c430cbe903a43",
            "arn_suffix": "app/jydweatherapp-dev-alb/f17c430cbe903a43",
            "dns_name": "jydweatherapp-dev-alb-1587270225.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043419761442:loadbalancer/app/jydweatherapp-dev-alb/f17c430cbe903a43",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jydweatherapp-dev-alb",
            "security_groups": [
              "sg-09ae088e2409939b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0da982d7a9749694a"
              },
              {
                "subnet_id": "subnet-0f024ce306f7315f6"
              }
            ],
            "subnets": [
              "subnet-0da982d7a9749694a",
              "subnet-0f024ce306f7315f6"
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-032f8c49805cef6c1",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.alb_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0920bb1936612b99f",
            "id": "nat-0f3410e914558c6fa",
            "network_interface_id": "eni-04437f15c5470dcba",
            "private_ip": "10.0.0.187",
            "public_ip": "108.128.208.180",
            "subnet_id": "subnet-0f024ce306f7315f6"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e1f41ddbfb052e7",
            "id": "nat-07147ba93779256f8",
            "network_interface_id": "eni-04ba35a3c9f64d552",
            "private_ip": "10.0.1.229",
            "public_ip": "18.200.221.171",
            "subnet_id": "subnet-0da982d7a9749694a"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f2a1ee8fea86aa12",
            "owner_id": "043419761442",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0f3410e914558c6fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-private-routes"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0652d608932795aba",
            "owner_id": "043419761442",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07147ba93779256f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-private-routes"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03998f942a7f46412",
            "owner_id": "043419761442",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbaeaacd5e72b39c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-public-routes"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038e0986302c6d6fd",
            "owner_id": "043419761442",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbaeaacd5e72b39c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-public-routes"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0803ce2c706ebe3c7",
            "route_table_id": "rtb-0f2a1ee8fea86aa12",
            "subnet_id": "subnet-0a62db276d708ae80"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0916ee736c54529a5",
            "route_table_id": "rtb-0652d608932795aba",
            "subnet_id": "subnet-0163ea5a72830dd89"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e477541720b4ef",
            "route_table_id": "rtb-03998f942a7f46412",
            "subnet_id": "subnet-0f024ce306f7315f6"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e76b5642069c25e",
            "route_table_id": "rtb-038e0986302c6d6fd",
            "subnet_id": "subnet-0da982d7a9749694a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:security-group/sg-09ae088e2409939b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ae088e2409939b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jydweatherapp-dev-alb-sg",
            "name_prefix": null,
            "owner_id": "043419761442",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:security-group/sg-026f10cd6005daced",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026f10cd6005daced",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ae088e2409939b8"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "jydweatherapp-dev-ecs-service-sg",
            "name_prefix": null,
            "owner_id": "043419761442",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:subnet/subnet-0a62db276d708ae80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-0a62db276d708ae80",
            "map_public_ip_on_launch": false,
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-private-subnet-0"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:subnet/subnet-0163ea5a72830dd89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0163ea5a72830dd89",
            "map_public_ip_on_launch": false,
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-private-subnet-1"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:subnet/subnet-0f024ce306f7315f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f024ce306f7315f6",
            "map_public_ip_on_launch": false,
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-public-subnet-0"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:subnet/subnet-0da982d7a9749694a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0da982d7a9749694a",
            "map_public_ip_on_launch": false,
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-public-subnet-1"
            },
            "vpc_id": "vpc-032f8c49805cef6c1"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043419761442:vpc/vpc-032f8c49805cef6c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdece58052eebaf4",
            "default_route_table_id": "rtb-0cd42cf3a7b5b604a",
            "default_security_group_id": "sg-0e69df4dca0ad041b",
            "dhcp_options_id": "dopt-3b8ac55d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032f8c49805cef6c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd42cf3a7b5b604a",
            "owner_id": "043419761442",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "jydweatherapp-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}